tests/reference/asr-infer_walrus_redecl_01-9910c17.stderr
semantic error: Variable 'x' is already declared; use `=` for assignment to existing variables
 --> tests/errors/infer_walrus_redecl_01.f90:4:5
  |
4 |     x := 10
  |     ^ already declared
